crates/reap-pm-core/tests/ui/price_deserialization_cannot_mint_off_grid_candidate.stderr
error[E0277]: the trait bound `PmPrice: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/price_deserialization_cannot_mint_off_grid_candidate.rs:7:27
  |
7 |     require_deserialize::<PmPrice>();
  |                           ^^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `PmPrice`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `PmPrice` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `require_deserialize`
 --> tests/ui/price_deserialization_cannot_mint_off_grid_candidate.rs:4:27
  |
4 | fn require_deserialize<T: for<'de> Deserialize<'de>>() {}
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `require_deserialize`
